--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <br>
     <br>
     <div id="if1" > 
-        <iframe class="f1" src="https://byjus.com/cbse-notes/cbse-class-6-science-notes-chapter-8-body-movements/" frameborder="0"></iframe>
+        <iframe class="f1" src="https://en.wikipedia.org/wiki/Ashoka" frameborder="0"></iframe>
     </div>
 </center>
 
