--- a/h2.html
+++ b/h2.html
@@ -24,7 +24,7 @@
     <br>
     <br>
     <div id="if1" > 
-        <iframe class="f1" src="https://www.google.co.in/" frameborder="0"></iframe>
+        <iframe class="f1" src="https://www.google.co.in/search?igu=1" frameborder="0"></iframe>
     </div>
 </center>
 
